<U+1F424> Fixed-Demo: change vertical-align value 'center' to 'middle'

--- a/test/sass/_flex.scss
+++ b/test/sass/_flex.scss
@@ -55,7 +55,7 @@
       // reason and sulotion: https://stackoverflow.com/questions/37746964/inline-flex-container-with-column-reverse-impacting-alignment-of-sibling-inline
       // column-reverse also reverse the flow of the container(upward)
       // column also change the flow of the container(upward)
-      vertical-align: center;
+      vertical-align: middle;
     }
   }
 
